--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>TP1</module>
         <module>TP2</module>
+        <module>TP3</module>
     </modules>
     <packaging>pom</packaging>
 </project>
