--- a/TP3/pom.xml
+++ b/TP3/pom.xml
@@ -34,5 +34,10 @@
             <artifactId>TP1</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>LATEST</version>
+        </dependency>
     </dependencies>
 </project>
