--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>TP1</module>
         <module>TP2</module>
         <module>TP3</module>
+        <module>TP4</module>
     </modules>
     <packaging>pom</packaging>
 </project>
